services/paperless/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    app: paperless
  namespace: paperless
spec:
  replicas: 3
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx:latest
          name: paperless
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-data
            - mountPath: /usr/src/paperless/media
              name: paperless-media
            - mountPath: /usr/src/paperless/export
              name: paperless-export
            - mountPath: /usr/src/paperless/consume
              name: paperless-consume
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: paperless-export
          persistentVolumeClaim:
            claimName: paperless-export
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-redis
  labels:
    app: paperless-redis
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
        - image: docker.io/library/redis:7
          name: paperless-redis
          ports:
            - containerPort: 6379
              name: paperless-redis
          volumeMounts:
            - mountPath: /data
              name: paperless-redis
      volumes:
        - name: paperless-redis
          persistentVolumeClaim:
            claimName: paperless-redis

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-postgres
  labels:
    app: paperless-postgres
  namespace: paperless
spec:
  serviceName: paperless-postgres
  replicas: 1
  selector:
    matchLabels:
      app: paperless-postgres
  template:
    metadata:
      labels:
        app: paperless-postgres
    spec:
      containers:
        - image: postgres:17.5
          name: paperless-postgres
          ports:
            - containerPort: 5432
              name: paperless-pg
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: paperless-postgres
      volumes:
        - name: paperless-postgres
          persistentVolumeClaim:
            claimName: paperless-postgres
